TaskAction as an enum
